Fix header layout on small screens

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -76,8 +76,7 @@ body {
 header {
   background-color: var(--dark-1);
   color: var(--white);
-  padding-bottom: 1rem;
-  height: 100px;
+  padding-bottom: -2rem;
 }
 
 header h1 {
@@ -85,11 +84,11 @@ header h1 {
 }
 
 header img {
-  width: 300px;
+  width: 260px;
   float: left;
   position: relative;
-  top: -26px;
-  left: -45px;
+  left: -26px;
+  margin-bottom: 22px;
 }
 
 #header-nav {
@@ -180,7 +179,7 @@ header a:hover {
 
 #info {
   color: var(--white);
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   padding-left: 4rem;
 }
 
